testing/tests/ui/rinja-block.stderr
error: unterminated "```rinja" block
 --> tests/ui/rinja-block.rs:7:1
  |
7 | /// ```html,rinja
  | ^^^^^^^^^^^^^^^^^

error: failed to parse template source
 --> <source attribute>:2:6
       " fail %}\n{% endif %}"
  --> tests/ui/rinja-block.rs:15:1
   |
15 | /// ```html,rinja
   | ^^^^^^^^^^^^^^^^^
